Update author name and add acknowledgments

--- a/docs/astrofd.tex
+++ b/docs/astrofd.tex
@@ -9,7 +9,7 @@
 \geometry{margin=1in}
 
 \title{AstroFD: A Relativistic Jet and SN-lite Solver for Modular Physics Studies}
-\author{Rangamahishi\thanks{Daniel Guggenheim School of Aerospace Engineering, Georgia Institute of Technology}}
+\author{Sriram P. Kalathoor\thanks{Daniel Guggenheim School of Aerospace Engineering, Georgia Institute of Technology}}
 \date{\today}
 
 \begin{document}
@@ -484,6 +484,11 @@ dissipation, two-temperature coupling, non-equilibrium chemistry, and
 SN-lite source terms. Validation tools and configuration tables are
 provided to facilitate reproducible studies and to serve as a foundation
 for future extensions.
+
+\section*{Acknowledgments}
+The author acknowledges helpful discussions and support from collaborators
+and the Georgia Institute of Technology. This section will be expanded in
+future versions.
 
 \appendix
 \section{Valencia Derivation Details}
