Refresh doc jet figures and update summary formatting

--- a/docs/astrofd.tex
+++ b/docs/astrofd.tex
@@ -469,12 +469,12 @@ regenerated with \texttt{tools/make\_doc\_figures.py}.
 
 \section{Discussion}\label{sec:discussion}
 AstroFD emphasizes transparent, modular physics and numerical methods to
-support controlled studies. The current implementation uses fixed
-spacetime metrics and parameterized SN-lite heating; these choices allow
-rapid iteration and reproducibility but do not replace full radiation
-transport or dynamic spacetime evolution. Future work will incorporate
-more detailed EOS options, expanded benchmark suites, and more complete
-transport models.
+support controlled studies. The current scope focuses on fixed
+background metrics and parameterized SN-lite heating to enable rapid and
+reproducible experiments; higher-fidelity transport and dynamic
+spacetime evolution are planned extensions rather than excluded design
+goals. Future work will incorporate more detailed EOS options, expanded
+benchmark suites, and more complete transport models.
 
 \section{Conclusion}
 We presented AstroFD, a modular relativistic solver designed for
