--- a/docs/figures/validation_summary.tex
+++ b/docs/figures/validation_summary.tex
@@ -5,12 +5,12 @@
 Metric & Value \\ 
 \hline
 Max Lorentz factor & 1.000e+00 \\ 
-Max signal speed & 1.000e+00 \\ 
-Mean inlet flux (abs) & 4.789e-05 \\ 
-divB max & 1.919e-01 \\ 
-divB rms & 1.521e-02 \\ 
-SN shock radius max & 2.400e-01 \\ 
-SN heating efficiency mean & 3.000e-01 \\ 
+Max signal speed & 9.976e-01 \\ 
+Mean inlet flux (abs) & 0.000e+00 \\ 
+divB max & N/A \\ 
+divB rms & N/A \\ 
+SN shock radius max & N/A \\ 
+SN heating efficiency mean & N/A \\ 
 \hline
 \end{tabular}
 \caption{Summary diagnostics from the latest run segment.}
