--- a/docs/figures/validation_summary.tex
+++ b/docs/figures/validation_summary.tex
@@ -4,13 +4,13 @@
 \hline
 Metric & Value \\ 
 \hline
-Max Lorentz factor & 1.000e+00 \\ 
-Max signal speed & 9.976e-01 \\ 
+Max Lorentz factor & 1.128e+00 \\ 
+Max signal speed & 7.736e-01 \\ 
 Mean inlet flux (abs) & 0.000e+00 \\ 
 divB max & N/A \\ 
 divB rms & N/A \\ 
-SN shock radius max & N/A \\ 
-SN heating efficiency mean & N/A \\ 
+SN shock radius max & 2.212e-01 \\ 
+SN heating efficiency mean & 0.000e+00 \\ 
 \hline
 \end{tabular}
 \caption{Summary diagnostics from the latest run segment.}
