Refine doc validation runs and clean LaTeX warnings

--- a/docs/astrofd.tex
+++ b/docs/astrofd.tex
@@ -192,9 +192,10 @@ S_D &= 0, \\
 S_{S_j} &= \frac{\alpha}{2} T^{\mu\nu} \partial_j g_{\mu\nu}, \\
 S_{\tau} &= \alpha \left(T^{\mu 0} \partial_\mu \ln \alpha - T^{\mu\nu} \Gamma^0_{\mu\nu}\right),
 \end{align}
-where $\Gamma^\alpha_{\mu\nu}$ are the Christoffel symbols. AstroFD uses
-analytic fixed metrics (Minkowski, Schwarzschild, Kerr-Schild) and
-computes these source terms from the prescribed background.
+{\raggedright where $\Gamma^\alpha_{\mu\nu}$ are the Christoffel symbols.
+AstroFD uses analytic fixed metrics: Minkowski, Schwarzschild, and
+Kerr--Schild. These provide the background terms used to compute the
+sources.\par}
 
 \paragraph{Magnetic 4-vector relations.}
 In ideal RMHD, the lab-frame magnetic field $B^i$ and 4-vector $b^\mu$ are
