--- a/docs/figures/config_table.tex
+++ b/docs/figures/config_table.tex
@@ -1,7 +1,7 @@
 \small
 \setlength{\tabcolsep}{4pt}
 \begin{longtable}{p{0.32\linewidth} p{0.15\linewidth} p{0.45\linewidth}}
-\caption{Full configuration parameter defaults (from utils/settings.py).}\\label{tab:config-full}\\
+\caption{Configuration parameter defaults (utils/settings.py).}\\label{tab:config-full}\\
 \hline
 Key & Default & Notes \\
 \hline
