Implement RMHD HLLD fluxes and add Riemann init

--- a/docs/figures/config_table.tex
+++ b/docs/figures/config_table.tex
@@ -141,6 +141,10 @@ RESULTS\\UNIQUE & false & \\
 RHO\_AMB & 1 & \\
 RIEMANN & hlle & \\
 RK\_ORDER & 2 & \\
+RMHD\_INIT & uniform & \\
+RMHD\_RIEMANN\\LEFT & null & \\
+RMHD\_RIEMANN\\RIGHT & null & \\
+RMHD\_RIEMANN\\X0 & 0.5 & \\
 SAVE\_RUN\\CONFIG & true & \\
 SHEAR\_ETA & 0 & \\
 SHEAR\_THICK & 0.02 & \\
