Add plane flux, spectra, and structure diagnostics

--- a/docs/figures/config_table.tex
+++ b/docs/figures/config_table.tex
@@ -49,6 +49,11 @@ DIAG\_MIXING\\MAX & 0.95 & \\
 DIAG\_MIXING\\MIN & 0.05 & \\
 DIAG\_MIXING\\TRACER\_IDX & 0 & \\
 DIAG\_MIXING\\X\_FRAC & 0.5 & \\
+DIAG\_PLANE\\ENABLED & false & \\
+DIAG\_PLANE\_X & null & \\
+DIAG\_SPECTRA\\ENABLED & false & \\
+DIAG\\STRUCTURE\\ENABLED & false & \\
+DIAG\\STRUCTURE\\MAX\_LAG & 16 & \\
 DISSIPATION\\ADVECT & true & \\
 DISSIPATION\\CAP\_FRAC & 0.5 & \\
 DISSIPATION\\ENABLED & false & \\
