Add dynamic nested refinement and adaptivity smoke

--- a/docs/figures/config_table.tex
+++ b/docs/figures/config_table.tex
@@ -10,11 +10,15 @@ Key & Default & Notes \\
 Key & Default & Notes \\
 \hline
 \endhead
+ADAPTIVITY\\BUFFER & 2 & \\
 ADAPTIVITY\\ENABLED & false & \\
+ADAPTIVITY\\FIELD & rho & \\
+ADAPTIVITY\\GRAD\\THRESHOLD & null & \\
 ADAPTIVITY\\MODE & nested\_static & \\
 ADAPTIVITY\\REFINEMENT & 2 & \\
 ADAPTIVITY\\REGION & null & \\
 ADAPTIVITY\\SUBCYCLES & null & \\
+ADAPTIVITY\\UPDATE\_EVERY & 10 & \\
 AMBIPOLAR\\COEFF & 0 & \\
 AMBIPOLAR\\ENABLED & false & \\
 ASSERTS & false & \\
