Allow adaptive modes in settings and refresh validation figures

--- a/docs/figures/validation_summary.tex
+++ b/docs/figures/validation_summary.tex
@@ -4,13 +4,13 @@
 \hline
 Metric & Value \\ 
 \hline
-Max Lorentz factor & 1.377e+00 \\ 
-Max signal speed & 8.127e-01 \\ 
-Mean inlet flux (abs) & 0.000e+00 \\ 
+Max Lorentz factor & 1.048e+00 \\ 
+Max signal speed & 9.934e-01 \\ 
+Mean inlet flux (abs) & 1.727e-02 \\ 
 divB max & N/A \\ 
 divB rms & N/A \\ 
-SN shock radius max & 3.273e-01 \\ 
-SN heating efficiency mean & 0.000e+00 \\ 
+SN shock radius max & N/A \\ 
+SN heating efficiency mean & N/A \\ 
 \hline
 \end{tabular}
 \caption{Summary diagnostics from the latest run segment.}
